Wed Jun 12 12:07:04 2013  Tanaka Akira  <akr@fsij.org>

	* sprintf.c (rb_str_format): Fix a dynamic format string.

Wed Jun 12 12:04:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): must not be modified once frozen even in
	  a callback method.

Wed Jun 12 12:03:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_sort_bang): must not be modified once frozen even in
	  a callback method.

Wed Jun 12 12:00:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (FL_SET_EMBED): shared object is frozen even when get
	  unshared.

	* array.c (rb_ary_modify): ARY_SET_CAPA needs unshared array.

Wed Jun 12 07:32:01 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_int): Use rb_big_uminus.

Wed Jun 12 07:12:54 2013  Eric Hodel  <drbrain@segment7.net>

	* struct.c:  Improve documentation: replace "instance variable" with
	  "member", recommend the use of a block to customize structs, note
	  that member accessors are created, general cleanup.

Wed Jun 12 06:35:01 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (INTEGER_PACK_NEGATIVE): Defined.
	  (rb_integer_unpack): sign argument removed.

	* bignum.c (rb_integer_unpack): sign argument removed.
	  Non-negative integers generated by default.
	  INTEGER_PACK_NEGATIVE flag is used to generate non-positive integers.

	* pack.c (pack_unpack): Follow the above change.

	* random.c (int_pair_to_real_inclusive): Ditto.
	  (make_seed_value): Ditto.
	  (mt_state): Ditto.
	  (limited_big_rand): Ditto.

	* marshal.c (r_object0): Ditto.

Wed Jun 12 00:07:46 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#parse_set_cookies): Extract.
	* test/xmlrpc/test_client.rb (XMLRPC::ClientTest#test_cookie_simple):
	  Add a test for the extracted method.

Tue Jun 11 23:56:24 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/xmlrpc/test_client.rb (XMLRPC::ClientTest::Fake::HTTP#started):
	  Add a missing empty line.
